--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
 dependencies {
     compile group: 'org.apache.maven', name: 'maven-core', version: '3.6.3'
     compile group: 'org.jacoco', name: 'jacoco-maven-plugin', version: '0.8.6'
+    compile group: 'com.opencsv', name: 'opencsv', version: '5.3'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
@@ -24,4 +25,14 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+}
+
+jar {
+  from {configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } 
+  manifest {
+    attributes(
+      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+      'Main-Class': 'org.testar.main.Main'
+    )
+  }
 }
