--- a/build.gradle
+++ b/build.gradle
@@ -21,19 +21,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
-// In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+     mavenCentral()
 }
 
 jar {
-  from {configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } 
-  manifest {
-    attributes(
-      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-      'Main-Class': 'org.testar.main.Main'
-    )
-  }
+    manifest {
+        attributes "Main-Class": "org.testar.main.Main"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
